# GOIT-Python_Web-HW-4

./: README.md  main.py  pyproject.toml
storage/: data.json
