[tool.poetry]
name = "goit-python-web-hw-4"
version = "0.1.0"
description = ""
authors = ["Iryna Dachuk <iradachuk@gmail.com>"]
readme = "README.md"
packages = [{include = "goit_python_web_hw_4"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
